Добавлены комментарии к коду, код подчищен. Добавлены отступы для стрелок слайдера

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,14 @@ body {
 	border-radius: 0px;
 	background: url("../images/head-bg.png") #000;
 }
+
+/*Логотип*/
+.img-responsive {
+	float: left;
+	margin: 12px 0px 0px 40px;
+}
+
+/*Стили для навигации*/
 .navbar {
 	margin-bottom: 0px;
 	border-bottom: none;
@@ -44,73 +52,71 @@ body {
 .navbar-nav li a:hover {
 	border-bottom: solid 2px #5094f2;
 }
-.carousel-control {
-	width: 0%;
-}
-#carousel {
-	margin: 0px auto;
-}
-.img-responsive {
-	float: left;
-	margin-left: 40px;
-}
 .navbar-header button {
 	background: #5094f2;
 }
 .navbar-default .navbar-toggle .icon-bar {
 	background-color: #fff;
 }
+
+/*Слайдер*/
+#carousel {
+	margin: 0px auto;
+}
+
+/*Стрелки переключения слайдов*/
+.carousel-control {
+	width: 0%;
+	margin: 0px 50px 0px 50px;
+}
+
+/*Ряд с иконками и текстом*/
 .container .row {
 	height: 400px;
 }
 #circles {
 	margin-top: 55px;
 }
-	#block1 .fa-circle {
-		color: #5094f2;
-	}
-	#block2 .fa-circle {
-		color: #d94748;
-	}
-	#block3 .fa-circle {
-		color: #ebbb11;
-	}
-	.col-md-4 {
-		text-align: center;
-	}
-	.icon_h {
-		color: #418df7;
-		font-size: 20px;
-	}
-	.icon_text {
-		color: #565353;
-	}
-	.icon_content {
-		margin-bottom: 20px;
-	}
-	.icon_content a {
-		text-decoration: none;
-	}
-	.icon_content a:hover {
-		text-decoration: none;
-	}
+#block1 .fa-circle {
+	color: #5094f2;
+}
+#block2 .fa-circle {
+	color: #d94748;
+}
+#block3 .fa-circle {
+	color: #ebbb11;
+}
+.col-md-4 {
+	text-align: center;
+}
+.icon_h {
+	color: #418df7;
+	font-size: 20px;
+}
+.icon_text {
+	color: #565353;
+}
+.icon_content {
+	margin-bottom: 20px;
+}
+.icon_content a {
+	text-decoration: none;
+}
+.icon_content a:hover {
+	text-decoration: none;
+}
+
+/*Ряд ниже иконок(с корзиной)*/
 #after_icons .row {
 	padding-top: 0px;
 	margin-top: 20px;
 	height: 300px;
 	border-bottom: solid 1px #e5e5e5;
-	/*padding-bottom: 30px;*/
 	overflow: hidden;
 }
 #af_ic_2 {
 	margin-left: 30px;
 }
-/*#after_icons .row .col-md-4 {
-	background: red;
-}
-#after_icons .row .col-md-5 {
-	background: blue;
-}*/
 #af_ic_1 h3 {
 	font-size: 27px;
 	color: #484b4e;
@@ -123,35 +129,41 @@ body {
 	color: #484b4e;
 	font-size: 14px;
 }
-.icon_underline { /*Подчеркивающая блоки иконок линия в моб.версии*/
-	height: 1px;
-	background: #e5e5e5;
-	margin-top: 20px;
+
+/*Подчеркивающая блоки иконок линия в моб.версии*/
+.icon_underline { 
+	width: 70%;
+	margin: 20px auto;
+	height: 2px;
+	background: #efecec;
 }
-/*#circles .row .col-xs-12 {
-	border: solid 2px red;
-}*/
-#rights .row { 					/*Ряд для строки копирайта*/
+
+/*Ряд для строки копирайта*/
+#rights .row { 					
 	margin-top: 35px;
 	color: #aea2a2;
 	text-align: center;
 	height: 60px;
 }
-.input { 			/*Стили для полей формы*/
+
+/*Стили для полей формы*/
+.input { 			
 	height: 40px;
-	margin-left: 50px;
-	margin-top: -3px;
+	margin: -3px 0px 0px 50px;
 	border: none;
 	border-bottom: solid 1px #e5e5e5;
 	width: 165px;
 }
-.fa-envelope-o, .fa-key, .fa-user, .fa-comment-o {			/*Стили для иконок формы*/
+
+/*Стили для иконок формы*/
+.fa-envelope-o, .fa-key, .fa-user, .fa-comment-o {			
 	position: absolute;
 	margin-top: 9px;
 	float: left;
 	color: #646060;
 }
-							/*Стили для модального окна Авторизации*/
+
+/*Стили для модального окна Авторизации*/
 .modal-header {
 	border: none;
 }
@@ -166,16 +178,8 @@ body {
 	border: none;
 	background: #2863b4;
 }
-						/*===============================*/
 
-					 /*Модальное окно для формы Contacts */
-/*#e_c_input, #p_c_input {
-	height: 40px;
-	border: none;
-	border-bottom: solid 1px #e5e5e5;
-	width: 160px;
-}*/
-						/*При фокусе текст placeholder'a исчезает*/
+/*При фокусе текст placeholder'a исчезает*/
 :focus::-webkit-input-placeholder {color: transparent}
 :focus::-moz-placeholder          {color: transparent}
 :focus:-moz-placeholder           {color: transparent}
@@ -184,7 +188,6 @@ body {
 .modal-body textarea {
 	border-radius: 3px;
 	resize: none;
-	/*border: none;*/
 	border: solid 1px #e5e5e5;
 }
 #modal-2 .modal-body button {
@@ -194,4 +197,3 @@ body {
 	border: none;
 	background: #2863b4;
 }
-							/*==============================*/
